# MicrosoftSampleIME

./: .gitignore  CMakeLists.txt  README.md
scripts/: lcompile32.ps1  lcompile64.ps1
